:wrench: fix color contrast on post-meta

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,11 @@
   letter-spacing: 0 !important;
 }
 
+.post-meta {
+  color: #757575; // a11y color contrast
+  font-size: 1em;
+}
+
 a {
   color: #2371d8; // a11y color contrast
 }
